plain_yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil42-app
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: wil42-app
  template:
    metadata:
      labels:
        app: wil42-app
    spec:
      containers:
        - image: wil42/playground
          name: wil42-app
          ports:
            - containerPort: 80
