plain_yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil42-app
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wil42-app
