plain_yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil42-app
  namespace: dev
spec:
  ingressClassName: traefik
  rules:
    - host: wil42-app.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wil42-app
                port:
                  number: 8888
